test_suite5/ALAN/test_suite/alan-2022-examples/failing/005120_mutation.alan
source p34y begin leave K elsif rem C end
